Setup/Applications/harnessconfigurationascodedemo/Services/testservice/Manifests/Files/backend/istio/apiopenweathermaporgdestinationrule.yaml
#harness.io/skip-file-for-deploy
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: apiopenweathermaporg
spec:
  host: api.openweathermap.org
  trafficPolicy:
   portLevelSettings:
   - port:
      number: 80
     tls:
       mode: SIMPLE
---
